@@ -1,10 +1,14 @@
 Package: rhdf5
 Type: Package
 Title: R Interface to HDF5
-Version: 2.31.0
+Version: 2.31.1
 Authors@R: c(person("Bernd", "Fischer", role = c("aut")), 
         person("Gregoire", "Pau", role="aut"),
-        person("Mike", "Smith", role=c("aut", "cre"), email = "mike.smith@embl.de"),
+        person("Mike", "Smith", 
+            role=c("aut", "cre"), 
+            email = "mike.smith@embl.de",
+            comment = c(ORCID = "0000-0002-7800-384")
+        ),
         person("Martin", "Morgan", role = "ctb"),
         person("Daniel", "van Twisk", role = "ctb"))
 Description: This package provides an interface between HDF5 and R. 
